BUG 1683, 1668, 1702, 1684, 1685, 1714, 1675, 1718, 1720, 1724, 1723, 1722: Bunch of bug fixes for dataset v2 * Clean up text for grouping wizard prompt * Hide Socialize menu in temp view * Clip blobby images so they don't cover footer * Upgrade to jQuery 1.4.2 -- this fixes a nasty eventing bug in IE that was causing uniform dropdowns and linked values in the sidebar to stop triggering * Make filter apply run through a callback through grouping so it works * Fix editing by converting view column to model column when appropriate * Adjusted sizes of all fields in sidebar so they don't wrap when a scrollbar appears * Fix grid resizing for sidebar so it works in IE * Move menus above BT
QA:
* Make sure bugs are fixed
* General site regression

--- a/app/styles/controls.sass
+++ b/app/styles/controls.sass
@@ -43,7 +43,7 @@ div.menu
     margin-top: 0.2em
     overflow: hidden
     position: absolute
-    z-index: 51
+    z-index: 10000
     ul.menuColumns
       margin: 0.3em 0
       overflow: hidden
