--- a/app/styles/grid-sidebar-custom.sass
+++ b/app/styles/grid-sidebar-custom.sass
@@ -207,13 +207,13 @@
 
           textarea, input[type="text"]
             margin-right: 0.2em
-            width: 5.5em
+            width: 5.1em
 
           .blist-combo
             margin:
               left: 0
               right: 0.2em
-            width: 5.4em
+            width: 5em
 
           &:first-child .blist-combo
             margin-left: -2px
@@ -248,7 +248,7 @@
             display: block
             margin-left: 5em
             margin-top: 0.1em
-            width: 7.9em
+            width: 7.1em
 
         &.type-location
           .lat_long
