--- a/app/styles/grid-sidebar.sass
+++ b/app/styles/grid-sidebar.sass
@@ -265,23 +265,23 @@ $sidebar_text_color: #666
           width: 6.4em
 
         textarea, input[type="text"]
-          width: 12.9em
+          width: 12.1em
 
         select
-          width: 13.7em
+          width: 12.9em
 
         input[type="radio"], .uniform.radio
           margin-right: 0.5em
 
         .ui-slider
           margin-left: 0.5em
-          width: 11.9em
+          width: 11.1em
 
         .blist-combo
           margin:
             left: -2px
             top: -3px
-          width: 12.9em
+          width: 12.1em
 
         span.error
           color: #ff0000
@@ -306,12 +306,12 @@ $sidebar_text_color: #666
 
         &.columnSelect select
           font-size: 1em
-          width: 11.6em
+          width: 10.85em
 
         &.slider
           .ui-slider
             margin-right: 0.7em
-            width: 9.4em
+            width: 8.6em
 
           input
             background-color: transparent
@@ -332,16 +332,16 @@ $sidebar_text_color: #666
           margin-right: 24px
 
           textarea, input[type="text"]
-            width: 10.9em
+            width: 10.1em
 
           select
-            width: 11.5em
+            width: 10.7em
 
           .ui-slider
-            width: 9.9em
+            width: 9.1em
 
           &.columnSelect select
-            width: 10.1em
+            width: 9.3em
 
         &.radioGroup, &.group
           padding-left: 0.65em
